--- a/angular-front/src/app/header/header.component.html
+++ b/angular-front/src/app/header/header.component.html
@@ -1,5 +1,9 @@
 <div class="header-container">
-    <div class="header-content">
+    <div class="header-submenu">
+        <a class="link-submenu" href="">Inscription</a>
+        <a class="link-submenu" href="">Information</a>
+    </div>
+    <div class="header-illustration">
         <p>Clément & Huyen</p>
     </div>
     <div class="header-submenu">
