--- a/angular-front/src/styles.scss
+++ b/angular-front/src/styles.scss
@@ -2,7 +2,7 @@
 // $secondary-color: #2F2A2E;
 // $tertiary-color: #231D21;
 
-$primary-color: #48D1CD;
+$primary-color: #8DF0E5;
 $secondary-color: #FFF8E5;
 $tertiary-color: #231D21;
 
