--- a/angular-front/src/styles.scss
+++ b/angular-front/src/styles.scss
@@ -15,15 +15,11 @@ body {
     box-sizing: border-box;
     font-family: "Roboto";
     background-color: $primary-color;
-  }
-
-  @font-face {
-    font-family: "Bricktown";
-    src: local("Bricktown"), url(./assets/fonts/Bricktown.ttf) format("truetype");
 }
+
 @font-face {
-    font-family: "Caviar";
-    src: local("CaviarDreams"), url(./assets/fonts/CaviarDreams.ttf) format("truetype");
+    font-family: "Saudagar";
+    src: local("Saudagar"), url(./assets/fonts/Saudagar.ttf) format("truetype");
 }
 
 .main-container {
@@ -40,7 +36,7 @@ body {
     background-color: $secondary-color;
     box-shadow: 0 1px 1px $tertiary-color;
 
-    font-family: "Bricktown";
+    font-family: "Saudagar";
     font-size: 1.5rem;
     color: $tertiary-color;
 
