--- a/angular-front/src/app/header/header.component.html
+++ b/angular-front/src/app/header/header.component.html
@@ -1,13 +1,18 @@
-<div class="header-container">
-    <div class="header-submenu">
-        <a class="link-submenu" href="">Inscription</a>
-        <a class="link-submenu" href="">Information</a>
+<nav class="container-fluid main-navbar pb-2">
+    <div class="d-flex justify-content-end">
+        <mat-slide-toggle></mat-slide-toggle>
     </div>
-    <div class="header-illustration">
-        <p>Clément & Huyen</p>
+    <div class="d-flex flex-column align-items-center">
+        <img class="col-5" src="/assets/images/logo1_crop.png">
+        <div class="d-flex flex-row col-sm-12 mt-4">
+            <div class="d-flex justify-content-around col-6">
+                <a class="link-submenu" href="">ACCUEIL</a>
+                <a class="link-submenu" href="">INFORMATION</a>
+            </div>
+            <div class="d-flex justify-content-around col-6">
+                <a class="link-submenu" href="">INSCRIPTION</a>
+                <a class="link-submenu" href="">PHOTO</a>
+            </div>
+        </div>
     </div>
-    <div class="header-submenu">
-        <a class="link-submenu" href="">Inscription</a>
-        <a class="link-submenu" href="">Information</a>
-    </div>
-</div>
+</nav>
