--- a/angular-front/src/styles.scss
+++ b/angular-front/src/styles.scss
@@ -1,12 +1,69 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$webForm-primary: mat.define-palette(mat.$indigo-palette);
+$webForm-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$webForm-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$webForm-theme: mat.define-light-theme((
+  color: (
+    primary: $webForm-primary,
+    accent: $webForm-accent,
+    warn: $webForm-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($webForm-theme);
+
 // $primary-color: #FAF9F8;
 // $secondary-color: #2F2A2E;
 // $tertiary-color: #231D21;
 
 $primary-color: #8DF0E5;
-$secondary-color: #FFF8E5;
+$secondary-color:#EDB24C;
 $tertiary-color: #231D21;
+$fourth-color:#FFF8E5;
+$white-color:#FFFFFF;
 
 
+
+.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+  background-color: #49c5b6;
+}
+
+.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+  background-color: #49c5b6;
+}
+
+.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+  background-color: rgb(128, 203, 196);
+}
+
+.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+  background-color: rgb(29, 135, 229);
+}
+
+.mat-slide-toggle.mat-checked .mat-slide-toggle-ripple .mat-ripple-element {
+  background-color: rgba(29, 135, 229, .2);
+}
 
 body {
     width: 100vw;
@@ -22,19 +79,24 @@ body {
     src: local("Saudagar"), url(./assets/fonts/Saudagar.ttf) format("truetype");
 }
 
-.main-container {
-    width: 100%;
-    display:flex;
-    flex-direction:column;
-    align-items:center;
+
+
+.main-navbar {
+  //box-shadow: 0 2px 5px #0000004d;
+  box-shadow: 0 2px 5px #EDB24C;
 }
 
-.header-container {
+.navbar-container {
     // height: 1.5rem;
     height: 12rem;
     width: 100%;
-    background-color: $secondary-color;
+    background-color: $white-color;
     box-shadow: 0 1px 1px $tertiary-color;
+
+
+    .navbar-image {
+      width:50%;
+    }
 
     font-family: "Saudagar";
     font-size: 1.5rem;
@@ -44,30 +106,13 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-end;
+}
 
-    .header-illustration {
-        display: flex;
-        justify-content: center;
-        width:40%;
-    } 
-
-    .header-submenu {
-        width:16%;
-        margin-left: 6rem;
-        margin-right: 6rem;
-        margin-bottom: 2rem;
-        display: flex;
-        flex-direction: row;
-
-        justify-content: space-between;
-    
-        .link-submenu {
-            font-family: "Caviar";
-            text-decoration: none;
-            font-size: 1.2rem;
-            color: $tertiary-color;
-        }
-    } 
+.link-submenu {
+  font-family: "Saudagar";
+  text-decoration: none;
+  font-size: 2rem;
+  color: $secondary-color ;
 }
 
 
@@ -81,3 +126,8 @@ body {
     align-items:left;
     justify-content:left;
 }
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
