navbar improvement colors and margin

--- a/angular-front/src/app/header/header.component.html
+++ b/angular-front/src/app/header/header.component.html
@@ -1,10 +1,10 @@
-<nav class="container-fluid main-navbar pb-2">
+<nav class="container-fluid main-navbar pb-2 mb-4">
     <div class="d-flex justify-content-end">
         <mat-slide-toggle></mat-slide-toggle>
     </div>
     <div class="d-flex flex-column align-items-center">
         <img class="col-5" src="/assets/images/logo1_crop.png">
-        <div class="d-flex flex-row col-sm-12 mt-4">
+        <div class="d-flex flex-row col-sm-12 mt-4 mb-2">
             <div class="d-flex justify-content-around col-6">
                 <a class="link-submenu" href="">ACCUEIL</a>
                 <a class="link-submenu" href="">INFORMATION</a>
