feature#21: Countdown container with flip-clock and inscription button

--- a/angular-front/src/app/shared/header/header.component.html
+++ b/angular-front/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="container-fluid">
+<nav class="container-fluid mb-5">
   <div class="unselectable-content row justify-content-center">
     <img alt="image du logo" i18n-alt class="col-11 col-sm-10 col-md-8 mt-2 mt-md-4" src="/assets/images/logo.png"/>
   </div>
