--- a/angular-front/src/styles/variables.scss
+++ b/angular-front/src/styles/variables.scss
@@ -1,5 +1,8 @@
+/* COLORS */
 $primary-blue-color: #8DF0E5;
 $secondary-blue-color: #8FD9CE;
+$dark-secondary-blue-color: #7dc0b6;
+$green-blue-color: #43cea2;
 $light-blue-color: #E3FFFC;
 $primary-gold-color: #EDB24C;
 $secondary-gold-color:#E59933;
@@ -10,3 +13,11 @@ $grey-color: #a3abbd;
 $white-color: #fbf9f7;
 $blue-color: #122274;
 $red-color: #CF081F;
+
+
+/* SIZE */
+$borderRadius: 10px;
+
+/* COUNTDOWN */
+$halfPaletteHeight: 0.65em;
+$paletteWidth: 1.5em;
