--- a/angular-front/src/app/app.component.html
+++ b/angular-front/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column justify-content-center">
+<div class="main-container">
   <app-header class="header-container"></app-header>
   <router-outlet></router-outlet>
 </div>
