Logo integration test

--- a/angular-front/src/styles.scss
+++ b/angular-front/src/styles.scss
@@ -87,27 +87,27 @@ body {
   box-shadow: 0 1px 2.5px #EDB24C;
 }
 
-.navbar-container {
-    // height: 1.5rem;
-    height: 12rem;
-    width: 100%;
-    background-color: $white-color;
-    box-shadow: 0 1px 1px $tertiary-color;
+// .navbar-container {
+//     // height: 1.5rem;
+//     height: 12rem;
+//     width: 100%;
+//     background-color: $white-color;
+//     box-shadow: 0 1px 1px $tertiary-color;
 
 
-    .navbar-image {
-      width:50%;
-    }
+//     .navbar-image {
+//       width:50%;
+//     }
 
-    font-family: "Saudagar";
-    font-size: 1.5rem;
-    color: $tertiary-color;
+//     font-family: "Saudagar";
+//     font-size: 1.5rem;
+//     color: $tertiary-color;
 
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-end;
-}
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: space-between;
+//     align-items: flex-end;
+// }
 
 .link-submenu {
   font-family: "Saudagar";
