--- a/angular-front/src/app/header/header.component.html
+++ b/angular-front/src/app/header/header.component.html
@@ -1,18 +1,18 @@
-<nav class="container-fluid main-navbar pb-2 mb-4">
-    <div class="d-flex justify-content-end">
-        <mat-slide-toggle></mat-slide-toggle>
+<nav class="navbar-main mb-4">
+  <div class="navbar-container d-flex justify-content-end">
+
+    <div class="d-flex justify-content-center flex-row col-sm-12 pt-3 pb-3">
+      <div class="d-flex justify-content-around col-6">
+          <a class="navbar-link" href="">ACCUEIL</a>
+          <a class="navbar-link" href="">INFORMATION</a>
+          <a class="navbar-link" href="">INSCRIPTION</a>
+          <a class="navbar-link" href="">PHOTO</a>
+      </div>
     </div>
-    <div class="d-flex flex-column align-items-center">
-        <img class="col-5" src="/assets/images/logo1_crop.png">
-        <div class="d-flex flex-row col-sm-12 mt-4 mb-2">
-            <div class="d-flex justify-content-around col-6">
-                <a class="link-submenu" href="">ACCUEIL</a>
-                <a class="link-submenu" href="">INFORMATION</a>
-            </div>
-            <div class="d-flex justify-content-around col-6">
-                <a class="link-submenu" href="">INSCRIPTION</a>
-                <a class="link-submenu" href="">PHOTO</a>
-            </div>
-        </div>
-    </div>
+    <mat-slide-toggle></mat-slide-toggle>
+  </div>
+
+  <div class="navbar-sub d-flex flex-column align-items-center mt-1">
+      <img class="col-5 mt-2" src="/assets/images/logo3_crop.png">
+  </div>
 </nav>
