feature#7: header initialization

--- a/angular-front/src/app/header/header.component.html
+++ b/angular-front/src/app/header/header.component.html
@@ -1,18 +1,14 @@
-<nav class="navbar-main mb-4">
-  <div class="navbar-container d-flex justify-content-end">
-
-    <div class="d-flex justify-content-center flex-row col-sm-12 pt-3 pb-3">
-      <div class="d-flex justify-content-around col-6">
-          <a class="navbar-link" href="">ACCUEIL</a>
-          <a class="navbar-link" href="">INFORMATION</a>
-          <a class="navbar-link" href="">INSCRIPTION</a>
-          <a class="navbar-link" href="">PHOTO</a>
-      </div>
-    </div>
-    <mat-slide-toggle></mat-slide-toggle>
+<div class="navbar-top">
+  <p>zdqdzdq</p>
+</div>
+<nav class="navbar-container">
+  <div class="test1">
+    <p>zdqdzdq</p>
   </div>
-
-  <div class="navbar-sub d-flex flex-column align-items-center mt-1">
-      <img class="col-5 mt-2" src="/assets/images/logo3_crop.png">
+  <!-- <div class="row test2">
+    <p>zdqdzdq</p>
   </div>
+  <div class="row test2">
+    <p>zdqdzdq</p>
+  </div> -->
 </nav>
