--- a/angular-front/src/app/app.component.html
+++ b/angular-front/src/app/app.component.html
@@ -1,19 +1,3 @@
-<div class="container-background d-flex justify-content-center">
-  <div class="container-content mt-10">
-
-  <app-header></app-header>
-</div>
-    <!-- <h1>Clément et Huyen</h1>
-    <h2>10 Aout 2023</h2>
-
-    <div class="form-container">
-      <div class="form-items">
-        <p>test</p>
-        <input type="text" />
-        <p>test</p>
-        <input type="text" />
-        <p>test</p>
-        <input type="text" />
-      </div>
-    </div> -->
+<div class="body-container d-flex justify-content-center">
+  <app-header class="body-content header-container"></app-header>
 </div>
