--- a/angular-front/src/app/app.component.html
+++ b/angular-front/src/app/app.component.html
@@ -1,3 +1,4 @@
-<div class="body-container d-flex justify-content-center">
-  <app-header class="body-content header-container"></app-header>
+<div class="d-flex flex-column justify-content-center">
+    <app-header class="header-container"></app-header>
+    <p class="font">TEST</p>
 </div>
