--- a/angular-front/src/app/header/header.component.scss
+++ b/angular-front/src/app/header/header.component.scss
@@ -1,31 +1,20 @@
 @import "variables.scss";
 
+.crop-logo img {
+  margin-bottom: -100px;
+}
 
-  .header-top {
-    width: 100%;
-    height: 100%;
-    background-image: url(/angular-front/src/assets/images/temp_logo.svg) no-repeat;
-    background-size: 100% 100%;
-  }
+.naming-text {
+  font-family: 'Cherolina';
+}
 
-  .svg-responsive {
-    width: 100%;
-    height: auto;
- }
+.navbar-link {
+  font-family:'Saudagar';
+}
 
-  .header-content {
-    background-color: $white-color;
-    height: 600px;
-    border-radius: 0 0 0.8rem 0.8rem;
-  }
-
-
-  .navbar-main {
-    //box-shadow: 0 2px 5px #0000004d;
-    // box-shadow: 0 1px 2.5px #EDB24C;
-  }
-
-
+.test {
+  background-color: red;
+}
 
   // TOGGLE
 
