--- a/angular-front/src/styles/styles.scss
+++ b/angular-front/src/styles/styles.scss
@@ -8,6 +8,7 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 
+
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
@@ -32,66 +33,34 @@ $webForm-theme: mat.define-light-theme((
 // that you are using.
 @include mat.all-component-themes($webForm-theme);
 
+$heading-handwritten: mat.define-typography-level(
+  $font-family: Cherolina,
+  $font-weight: 400,
+  $font-size: 1rem,
+  $line-height: 1,
+  $letter-spacing: normal,
+);
+
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 
 @import "variables.scss";
 
-html, body { padding: 0; margin: 0;} 
+html, body { padding: 0; margin: 0;}
 
-app-root {
-  background-color:red;
-  width:100%;
-  height:100%;
+
+app-header {
+  min-height: 45vh;
+  height: 60vh;
+  background-color: #f6f5f4;
 }
 
-// FONTS
-
-@font-face {
-    font-family: "Norma-Bold";
-    src: local("Norma-Bold"), url(../assets/fonts/Norma-Bold.ttf) format("truetype");
+.naming-text {
+  font-family: 'saudagar';
 }
 
-@font-face {
-  font-family: "Saudagar";
-  src: local("Saudagar"), url(../assets/fonts/Saudagar.ttf) format("truetype");
+
+.font {
+  font: 1.2em "norma", sans-serif;
 }
-
-.body-container {
-  // background-color:$light-blue-color;
-  background: rgb(234,190,117);
-  background: radial-gradient(circle, rgba(234,190,117,1) 12%, $light-blue-color 95%); min-height:100vh;
-}
-
-.body-content {
-  width:90%;
-}
-
-.header-container {
-  height:25%;
-  margin-top:5%;
-}
-
-// .container-content {
-//   margin-top:120px;
-//   width:90%;
-//   height:100%;
-// }
-
-
-// body {
-//   margin: 0;
-//   padding: 0;
-// }
-
-
-
-
-// .form-container {
-//     width: 80%;
-//     display:flex;
-//     flex-direction: column;
-//     align-items:left;
-//     justify-content:left;
-// }
 
