--- a/angular-front/src/app/header/header.component.html
+++ b/angular-front/src/app/header/header.component.html
@@ -7,15 +7,18 @@
     <div class="d-flex justify-content-center">
       <h1 class="naming-text">Clement & Huyen</h1>
     </div>
+    <div class="d-flex justify-content-end">
+      <p class="sub-text">17 juin 2023</p>
+    </div>
   </div>
   <div class="row">
-    <div class="test col-sm d-flex justify-content-between">
-      <div></div>
-      <div>ACCUEIL</div>
-        <div>I N F O R M AT I O N</div>
-        <div>INSCRIPTION</div>
-        <div>P H O TO</div>
-        <div></div>
+    <div class="d-flex justify-content-center w-100">
+      <div class="d-flex justify-content-between w-75">
+      <a class="navbar-link" href="#">ACCUEIL</a>
+      <a class="navbar-link" href="#">I N F O R M AT I O N</a>
+      <a class="navbar-link" href="#" >INSCRIPTION</a>
+      <a class="navbar-link" href="#">P H O TO</a>
+    </div>
     </div>
   </div>
 </nav>
