--- a/angular-front/src/styles/variables.scss
+++ b/angular-front/src/styles/variables.scss
@@ -1,8 +1,10 @@
-$primary-color: #8DF0E5;
-$secondary-color: #EDB24C;
-$tertiary-color: #231D21;
-$fourth-color: #F0EBE5;
+$primary-blue-color: #8DF0E5;
+$secondary-blue-color: #70e9da;
 $light-blue-color: #E3FFFC;
-$white-color: #FFFFFF;
+$primary-gold-color: #EDB24C;
+$secondary-gold-color:#E59933;
+$dark-color: #231D21;
+$grey-color: #F0EBE5;
+$white-color: #fbf9f7;
 $blue-color: #122274;
 $red-color: #CF081F;
