--- a/angular-front/src/styles/styles.scss
+++ b/angular-front/src/styles/styles.scss
@@ -1,46 +1,3 @@
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
-// Plus imports for other components in your app.
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.form
-// Be sure that you only ever include this mixin once!
-@include mat.core();
-
-
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$webForm-primary: mat.define-palette(mat.$indigo-palette);
-$webForm-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$webForm-warn: mat.define-palette(mat.$red-palette);
-
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$webForm-theme: mat.define-light-theme((
-  color: (
-    primary: $webForm-primary,
-    accent: $webForm-accent,
-    warn: $webForm-warn,
-  )
-));
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include mat.all-component-themes($webForm-theme);
-
-$heading-handwritten: mat.define-typography-level(
-  $font-family: Cherolina,
-  $font-weight: 400,
-  $font-size: 1rem,
-  $line-height: 1,
-  $letter-spacing: normal,
-);
-
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 
@@ -50,9 +7,8 @@ html, body { padding: 0; margin: 0;}
 
 
 app-header {
-  min-height: 45vh;
-  height: 60vh;
-  background-color: #f6f5f4;
+  min-height: 20rem;
+  height: 20rem;
 }
 
 .naming-text {
@@ -61,6 +17,15 @@ app-header {
 
 
 .font {
-  font: 1.2em "norma", sans-serif;
+  font: 1.2em "saudagar";
 }
 
+
+.golden-background {
+  background: rgb(170,129,83);
+  background: radial-gradient(circle, rgba(170,129,83,1) 2%,
+  rgba(170,129,83,1) 14%, rgba(184,143,91,1) 25%,
+   rgba(184,143,91,1) 36%, rgba(192,152,96,1) 46%,
+    rgba(208,167,104,1) 60%, rgba(241,198,122,1) 80%,
+    rgba(229,184,115,1) 100%);
+}
