--- a/angular-front/src/app/app.component.html
+++ b/angular-front/src/app/app.component.html
@@ -1,5 +1,4 @@
 <div class="d-flex flex-column justify-content-center">
-    <app-header class="header-container"></app-header>
-    <p class="font">TEST</p>
-
+  <app-header class="header-container"></app-header>
+  <router-outlet></router-outlet>
 </div>
