--- a/angular-front/src/styles/variables.scss
+++ b/angular-front/src/styles/variables.scss
@@ -1,10 +1,12 @@
 $primary-blue-color: #8DF0E5;
-$secondary-blue-color: #70e9da;
+$secondary-blue-color: #8FD9CE;
 $light-blue-color: #E3FFFC;
 $primary-gold-color: #EDB24C;
 $secondary-gold-color:#E59933;
+$primary-negative-color:#D98F9A;
+$prmary-positive-color:#8FD9A9;
 $dark-color: #231D21;
-$grey-color: #F0EBE5;
+$grey-color: #a3abbd;
 $white-color: #fbf9f7;
 $blue-color: #122274;
 $red-color: #CF081F;
