--- a/angular-front/src/app/shared/header/header.component.html
+++ b/angular-front/src/app/shared/header/header.component.html
@@ -1,15 +1,12 @@
 <nav class="container-fluid">
-  <div class="d-flex justify-content-end">
-    <mat-slide-toggle class="lang-toggle-bar"></mat-slide-toggle>
-  </div>
   <div class="unselectable-content row justify-content-center">
-    <img class="col-11 col-sm-10 col-md-8 mt-2 mt-md-4" src="/assets/images/logo.png"/>
+    <img alt="image du logo" i18n-alt class="col-11 col-sm-10 col-md-8 mt-2 mt-md-4" src="/assets/images/logo.png"/>
   </div>
   <div class="unselectable-content row">
     <div class="text-center col-12 mt-4 mt-sm-4 mt-md-5">
       <h1 class="navbar-title mt-sm-3 mt-md-3">Huyen & Clément</h1>
       <div class="col-sm-10 col-md-10 col-lg-8 d-flex justify-content-end mt-2">
-        <h3 class="navbar-subtitle">17 JUIN 2023</h3>
+        <p class="navbar-subtitle">{{dDay | date:'longDate'}}</p>
       </div>
     </div>
   </div>
@@ -17,20 +14,19 @@
     <div class="row">
       <a class="col-3 text-center navbar-link" routerLink="/home"
         routerLinkActive="active-link">
-        <span>ACCUEIL</span>
+        <span i18n>ACCUEIL</span>
       </a>
       <a class="col-3 text-center navbar-link" routerLink="/information"
         routerLinkActive="active-link">
-        <span>INFORMATION</span>
+        <span i18n>INFORMATION</span>
       </a>
       <a class="col-3 text-center navbar-link" routerLink="/register"
-        routerLinkActive="active-link"
-        (click)="test()">
-        <span>INSCRIPTION</span>
+        routerLinkActive="active-link">
+        <span i18n>INSCRIPTION</span>
       </a>
       <a class="col-3 text-center navbar-link" routerLink="/photo"
         routerLinkActive="active-link">
-        <span>PHOTO</span>
+        <span i18n>ALBUM</span>
       </a>
     </div>
     <div class="row mt-3">
