--- a/angular-front/src/styles/variables.scss
+++ b/angular-front/src/styles/variables.scss
@@ -21,9 +21,10 @@ $blue-color: #122274;
 $red-color: #CF081F;
 
 
-/* SIZE */
-$borderRadius: 2.5vw;
-
 /* COUNTDOWN */
 $halfPaletteHeight: 4vw;
 $paletteWidth: 10vw;
+// SIZES
+$footer-link-text-size: 2rem;
+$footer-text-size: 1.2rem;
+$borderRadius: 2.5vw;
