--- a/angular-front/src/app/home/components/countdown-custom/countdown-custom.component.html
+++ b/angular-front/src/app/home/components/countdown-custom/countdown-custom.component.html
@@ -1,10 +1,10 @@
 <div class="flip-clock-element">
   <div class="flip-element">
     <div class="palette">
-      <b class="palette-top" [@flipTop]="unit">{{unit}}</b>
-      <b class="palette-bottom" [attr.data]="lastUnit"></b>
-      <b class="palette-back" [attr.data]="lastUnit">
-        <b class="palette-bottom" [@flipBottom]="unit" [attr.data]="unit">
+      <b class="palette-top text-center" [@flipTop]="unit">{{unit}}</b>
+      <b class="palette-bottom text-center" [attr.data]="lastUnit"></b>
+      <b class="palette-back text-center" [attr.data]="lastUnit">
+        <b class="palette-bottom text-center" [@flipBottom]="unit" [attr.data]="unit">
         </b>
       </b>
     </div>
