--- a/angular-front/src/app/home/components/countdown-group/countdown-group.component.html
+++ b/angular-front/src/app/home/components/countdown-group/countdown-group.component.html
@@ -1,47 +1,40 @@
 <div class="countdown turquoise-radiant-reverse d-flex flex-column align-items-center">
   <h1 class="heading-line" i18n>TEMPS RESTANT</h1>
-  <div class="d-flex justify-content-center align-items-center">
-    <div class="d-flex flex-column">
+  <div class="unselectable-content d-flex justify-content-center align-items-center">
+    <div class="d-flex flex-column align-items-center">
       <app-countdown-custom [unit]="monthToDday"></app-countdown-custom>
       <div class="d-flex justify-content-center mt-2">
-      <span class="clock-unit" i18n>
-        Mois
-      </span>
+        <span class="clock-unit mt-2" i18n>
+          Mois
+        </span>
+      </div>
     </div>
-    </div>
-    <div class="d-flex flex-column">
+    <div class="d-flex flex-column align-items-center">
       <app-countdown-custom [unit]="hoursToDday"></app-countdown-custom>
       <div class="d-flex justify-content-center mt-2">
-      <span class="clock-unit" i18n>
-        Heures
-      </span>
+        <span class="clock-unit mt-2" i18n>
+          Heures
+        </span>
+      </div>
     </div>
-    </div>
-    <div class="d-flex flex-column">
+    <div class="d-flex flex-column align-items-center">
       <app-countdown-custom [unit]="minutesToDday"></app-countdown-custom>
       <div class="d-flex justify-content-center mt-2">
-      <span class="clock-unit" i18n>
-        Minutes
-      </span>
+        <span class="clock-unit mt-2" i18n>
+          Minutes
+        </span>
+      </div>
     </div>
-    </div>
-    <div class="d-flex flex-column">
+    <div class="d-flex flex-column align-items-center">
       <app-countdown-custom [unit]="secondsToDday"></app-countdown-custom>
       <div class="d-flex justify-content-center mt-2">
-        <span class="clock-unit" i18n>
+        <span class="clock-unit mt-2" i18n>
           Secondes
         </span>
       </div>
     </div>
   </div>
-  <div class="register-button d-flex justify-content-center">
-    <button class="button-glow" data-style="no-move" routerLink="/register"
-    routerLinkActive="active-link" i18n>
-      INSCRIPTION
-      <svg xmlns="http://www.w3.org/2000/svg">
-        <rect pathLength="100" class="glow" stroke-linecap="round"></rect>
-        <rect pathLength="100" class="border" stroke-linecap="round"></rect>
-      </svg>
-    </button>
-  </div>
+  <button class="light-button" data-style="no-move" routerLink="/register" routerLinkActive="active-link" i18n>
+    INSCRIPTION
+  </button>
 </div>
